@@ -8,187 +8,114 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
- * Класс {@code DepartmentsTest} содержит модульные тесты
- * для проверки работы методов класса {@link Departments}.
- *
- * <p>Тестируются сценарии восстановления пропущенных
- * подразделений ({@link Departments#fillGaps(List)}),
- * а также сортировка в прямом ({@link Departments#sortAsc(List)})
- * и обратном ({@link Departments#sortDesc(List)}) порядке.</p>
- *
- * <p><b>Пример тестирования:</b></p>
- * <pre>{@code
- * List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
- * List<String> expected = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
- * List<String> result = Departments.fillGaps(input);
- * assertThat(result).containsSequence(expected);
- * }</pre>
+ * Tests for the {@link Departments} class.
  *
  * @author Maksim Merkulov
- * @version 1.0
+ * @version 1.1
  */
 class DepartmentsTest {
 
     /**
-     * Проверяет, что при отсутствии родительских подразделений метод
-     * {@link Departments#fillGaps(List)} корректно добавляет их в список.
+     * Verifies that missing parent departments are correctly added.
      */
     @Test
     void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1");
+        List<String> expected = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
 
     /**
-     * Проверяет, что если все подразделения уже присутствуют,
-     * метод {@link Departments#fillGaps(List)} не изменяет список.
+     * Verifies that the list remains unchanged if all departments exist.
      */
     @Test
     void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expected = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
 
     /**
-     * Проверяет добавление недостающих подразделений при сложной иерархии.
+     * Verifies department expansion for complex hierarchies.
      */
     @Test
     void whenMissedSomeDepartmentsCode() {
-        List<String> input = Arrays.asList(
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K2/SK1/SSK1"
+        List<String> input = List.of(
+                "K1/SK1/SSK1", "K1/SK1/SSK2", "K2/SK1/SSK1"
         );
-        List<String> expected = Arrays.asList(
-                "K1",
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K2",
-                "K2/SK1",
-                "K2/SK1/SSK1"
+        List<String> expected = List.of(
+                "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
+                "K2", "K2/SK1", "K2/SK1/SSK1"
         );
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
 
     /**
-     * Проверяет сортировку в прямом порядке,
-     * когда в списке нет пропущенных подразделений.
+     * Verifies ascending sort order when no departments are missing.
      */
     @Test
     void whenSortAscWithoutMissedDepartments() {
         List<String> input = Arrays.asList(
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K2",
-                "K2/SK1",
-                "K1/SK2",
-                "K1",
-                "K2/SK1/SSK2",
-                "K2/SK1/SSK1"
+                "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K2", "K2/SK1",
+                "K1/SK2", "K1", "K2/SK1/SSK2", "K2/SK1/SSK1"
         );
-        List<String> expected = Arrays.asList(
-                "K1",
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K1/SK2",
-                "K2",
-                "K2/SK1",
-                "K2/SK1/SSK1",
-                "K2/SK1/SSK2"
+        List<String> expected = List.of(
+                "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2",
+                "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2"
         );
         Departments.sortAsc(input);
         assertThat(input).containsSequence(expected);
     }
 
     /**
-     * Проверяет сортировку в прямом порядке
-     * при наличии пропущенных подразделений.
+     * Verifies ascending sort order when some departments were skipped.
      */
     @Test
     void whenSortAscWithMissedDepartments() {
         List<String> input = Arrays.asList(
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K2/SK1",
-                "K1/SK2",
-                "K2/SK1/SSK2",
-                "K2/SK1/SSK1"
+                "K1/SK1/SSK1", "K1/SK1/SSK2", "K2/SK1", "K1/SK2",
+                "K2/SK1/SSK2", "K2/SK1/SSK1"
         );
-        List<String> expected = Arrays.asList(
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K1/SK2",
-                "K2/SK1",
-                "K2/SK1/SSK1",
-                "K2/SK1/SSK2"
+        List<String> expected = List.of(
+                "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K2/SK1",
+                "K2/SK1/SSK1", "K2/SK1/SSK2"
         );
         Departments.sortAsc(input);
         assertThat(input).containsSequence(expected);
     }
 
     /**
-     * Проверяет сортировку в обратном порядке,
-     * когда в списке нет пропущенных подразделений.
+     * Verifies descending sort order when no departments are missing.
      */
     @Test
     void whenSortDescWithoutMissedDepartments() {
         List<String> input = Arrays.asList(
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K2",
-                "K2/SK1",
-                "K1/SK2",
-                "K1",
-                "K2/SK1/SSK2",
-                "K2/SK1/SSK1"
+                "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K2", "K2/SK1",
+                "K1/SK2", "K1", "K2/SK1/SSK2", "K2/SK1/SSK1"
         );
-        List<String> expected = Arrays.asList(
-                "K2",
-                "K2/SK1",
-                "K2/SK1/SSK1",
-                "K2/SK1/SSK2",
-                "K1",
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K1/SK2"
+        List<String> expected = List.of(
+                "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2", "K1",
+                "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2"
         );
         Departments.sortDesc(input);
         assertThat(input).containsSequence(expected);
     }
 
     /**
-     * Проверяет сортировку в обратном порядке
-     * при наличии пропущенных подразделений.
+     * Verifies descending sort order when some departments were skipped.
      */
     @Test
     void whenSortDescWithMissedDepartments() {
         List<String> input = Arrays.asList(
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K2/SK1",
-                "K1/SK2",
-                "K2/SK1/SSK2",
-                "K2/SK1/SSK1"
+                "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K2/SK1",
+                "K1/SK2", "K2/SK1/SSK2", "K2/SK1/SSK1"
         );
-        List<String> expected = Arrays.asList(
-                "K2/SK1",
-                "K2/SK1/SSK1",
-                "K2/SK1/SSK2",
-                "K1/SK1",
-                "K1/SK1/SSK1",
-                "K1/SK1/SSK2",
-                "K1/SK2"
+        List<String> expected = List.of(
+                "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1",
+                "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2"
         );
         Departments.sortDesc(input);
         assertThat(input).containsSequence(expected);
